[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/GameUI.gd" type="Script" id=1]
[ext_resource path="res://scripts/LevelViewport.gd" type="Script" id=2]
[ext_resource path="res://scripts/UIScaler.gd" type="Script" id=3]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://scenes/Achievements.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/scenes/StatsScene/StatsScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/OptionsPage.tscn" type="PackedScene" id=7]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=8]
[ext_resource path="res://globals/LevelBGMPlayer.gd" type="Script" id=9]

[sub_resource type="ButtonGroup" id=1]

[node name="GameUI" type="Control"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ -298.126 ]
}

[node name="LevelViewport" type="ViewportContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
stretch = true
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="LevelViewport"]
pause_mode = 1
arvr = true
size = Vector2( 1024, 600 )
own_world = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="UIScaler" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Menu" type="Panel" parent="UIScaler"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -410.625
margin_top = -2.0
margin_right = 622.375
margin_bottom = 600.0
script = ExtResource( 4 )

[node name="AchievementsPage" parent="UIScaler/Menu" instance=ExtResource( 5 )]
visible = false
margin_left = 407.25
margin_top = 2.25
margin_right = 407.25
margin_bottom = 2.25

[node name="StatsPage" parent="UIScaler/Menu" instance=ExtResource( 6 )]
visible = false
margin_left = 1098.25
margin_top = -0.75
margin_right = 943.251
margin_bottom = 61.25

[node name="OptionsPage" parent="UIScaler/Menu" instance=ExtResource( 7 )]
visible = false
margin_left = 413.0
margin_right = 398.0

[node name="HBoxContainer" type="VBoxContainer" parent="UIScaler/Menu"]
modulate = Color( 1, 0.956863, 0.956863, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -266.0
margin_right = 123.5
margin_bottom = 301.0
__meta__ = {
"_edit_group_": true
}

[node name="Save" type="Button" parent="UIScaler/Menu/HBoxContainer"]
visible = false
margin_right = 230.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "KEY_SAVE"
flat = true

[node name="Return" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_right = 230.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "KEY_Return"
flat = true

[node name="Options" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 114.0
margin_right = 230.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 1 )
text = "KEY_Options"
flat = true

[node name="Stats" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 228.0
margin_right = 230.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 1 )
text = "KEY_Stats"
flat = true

[node name="Quit" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 342.0
margin_right = 230.0
margin_bottom = 452.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 1 )
text = "KEY_Quit"
flat = true

[node name="Achievements" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 456.0
margin_right = 230.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 1 )
text = "KEY_ACH"
flat = true

[node name="BGMPlayer" type="AudioStreamPlayer" parent="UIScaler/Menu"]
volume_db = -10.0
autoplay = true
script = ExtResource( 9 )
id = "Menu"

[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Return" to="UIScaler/Menu" method="_on_Return_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Options" to="UIScaler/Menu" method="_on_Options_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Stats" to="UIScaler/Menu" method="_on_Stats_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Quit" to="UIScaler/Menu" method="_on_Quit_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Achievements" to="UIScaler/Menu" method="_on_Achievements_pressed"]
